--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.2.1",
     "@types/express": "^5.0.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "prisma": "^6.2.1",
     "typescript": "^5.7.3"
