--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -28,6 +28,7 @@ jobs:
           cache: "npm"
 
       - name: Install Dependencies
+        working-directory: backend
         run: npm install
 
       - name: Setup PostgreSQL
@@ -39,7 +40,9 @@ jobs:
           sudo -u postgres psql -c "ALTER USER ${{ secrets.DB_USER }} WITH PASSWORD '${{ secrets.DB_PASSWORD }}';"
 
       - name: Apply Prisma Migrations
+        working-directory: backend # Runs in backend folder
         run: npx prisma migrate dev --name init
 
       - name: Run Integration Tests
-        run: npm test:integration
+        working-directory: backend # Runs in backend folder
+        run: npm run test:integration
