--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -1,39 +1,96 @@
-name: Build Custom Image with Packer
+name: CI/CD Pipeline
 
 on:
+  pull_request:
+    branches:
+      - main # Triggered on PR creation or updates to PRs targeting the main branch
   push:
     branches:
-      - main # Trigger only when PRs are merged
+      - main # Triggered only when a PR is merged into the main branch
 
 jobs:
-  build-artifact:
-    name: Build Application Artifact
+  # Integration Testing Job
+  integration-test:
+    name: Run Integration Tests
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    env:
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: "npm"
+
+      - name: Install Dependencies
+        working-directory: backend
+        run: npm install
+
+      - name: Make Scripts Executable
+        run: |
+          chmod +x backend/scripts/run-integration.sh
+          chmod +x backend/scripts/wait-for-it.sh
+
+      - name: Setup PostgreSQL
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql postgresql-contrib
+          sudo systemctl start postgresql
+          sudo -u postgres psql -c "CREATE DATABASE ${{ secrets.DB_NAME }};"
+          sudo -u postgres psql -c "ALTER USER ${{ secrets.DB_USER }} WITH PASSWORD '${{ secrets.DB_PASSWORD }}';"
+
+      - name: Apply Prisma Migrations
+        working-directory: backend
+        run: npx prisma migrate dev --name init
+
+      - name: Run Integration Tests
+        working-directory: backend
+        run: npm run test:integration
+
+  # Build Application Artifact
+  build-artifact:
+    name: Build Application Artifact
+    runs-on: ubuntu-latest
+    needs: integration-test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' # Only on merge
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "20"
+
       - name: Install Dependencies & Build Application
         working-directory: backend
         run: |
-          # Install dependencies and build the app
           npm install
           npm run build
-          # Zip the whole backend folder
           zip -r backend.zip .
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
           name: backend-artifact
           path: backend/backend.zip
 
+  # Packer Build Job (only runs on merges to main)
   packer-build:
     name: Build Custom Image with Packer (AWS & GCP)
     runs-on: ubuntu-latest
     needs: build-artifact
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' # Runs only on merge to main
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -52,7 +109,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Setup GCP CLI
-        uses: "google-github-actions/auth@v2"
+        uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS}}
 
@@ -66,6 +123,7 @@ jobs:
 
       - name: Validate Packer Template
         run: packer validate machine.pkr.hcl
+
       - name: Build Custom Image
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -74,4 +132,11 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
           DB_USER: ${{ secrets.DB_USER }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        run: packer build machine.pkr.hcl
+        run: |
+          # Generate timestamp (ISO 8601 format without colons)
+          BUILD_TIMESTAMP=$(date -u +"%Y%m%dT%H%M%S")
+
+          # Pass timestamp to Packer
+          packer build \
+            -var "build_timestamp=$BUILD_TIMESTAMP" \
+            machine.pkr.hcl
