--- a/.github/workflows/packer_validate.yml
+++ b/.github/workflows/packer_validate.yml
@@ -18,6 +18,8 @@ jobs:
           version: "latest"
 
       - name: Initialize Packer
+        env:
+          PACKER_GITHUB_API_TOKEN: ${{ secrets.PACKER_GITHUB_API_TOKEN }}
         run: packer init machine.pkr.hcl
 
       - name: Check Packer Formatting
