--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -96,7 +96,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download Artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: backend-artifact
           path: backend
@@ -119,6 +119,8 @@ jobs:
           version: "latest"
 
       - name: Initialize Packer Plugins
+        env:
+          PACKER_GITHUB_API_TOKEN: ${{ secrets.PACKER_GITHUB_API_TOKEN }}
         run: packer init .
 
       - name: Validate Packer Template
