--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -112,6 +112,7 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS}}
+          create_credentials_file: true
 
       - name: Setup Packer
         uses: hashicorp/setup-packer@main
@@ -130,7 +131,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
+          GOOGLE_APPLICATION_CREDENTIALS: "${{ github.workspace }}/credentials.json"
           DB_NAME: ${{ secrets.DB_NAME }}
           DB_USER: ${{ secrets.DB_USER }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
