--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -9,7 +9,6 @@ on:
       - main # Triggered only when a PR is merged into the main branch
 
 jobs:
-  # Integration Testing Job
   integration-test:
     name: Run Integration Tests
     runs-on: ubuntu-latest
@@ -21,7 +20,6 @@ jobs:
       DB_HOST: ${{ secrets.DB_HOST }}
       DB_PORT: ${{ secrets.DB_PORT }}
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -57,12 +55,11 @@ jobs:
         working-directory: backend
         run: npm run test:integration
 
-  # Build Application Artifact
   build-artifact:
     name: Build Application Artifact
     runs-on: ubuntu-latest
     needs: integration-test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' # Only on merge
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -85,12 +82,11 @@ jobs:
           name: backend-artifact
           path: backend/backend.zip
 
-  # Packer Build Job (only runs on merges to main)
   packer-build:
     name: Build Custom Image with Packer (AWS & GCP)
     runs-on: ubuntu-latest
     needs: build-artifact
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' # Runs only on merge to main
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -111,7 +107,7 @@ jobs:
       - name: Setup GCP CLI
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS}}
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
 
       - name: Setup Packer
         uses: hashicorp/setup-packer@main
@@ -126,7 +122,7 @@ jobs:
       - name: Validate Packer Template
         run: packer validate machine.pkr.hcl
 
-      - name: Build Custom Image
+      - name: Build Custom Images
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -138,7 +134,46 @@ jobs:
           # Generate timestamp (ISO 8601 format without colons)
           BUILD_TIMESTAMP=$(date -u +"%Y%m%dT%H%M%S")
 
-          # Pass timestamp to Packer
+          # Run Packer build
           packer build \
             -var "build_timestamp=$BUILD_TIMESTAMP" \
             machine.pkr.hcl
+
+          # Extract AWS AMI ID using the builder_type filter to ensure we get the amazon-ebs build
+          AWS_AMI_ID=$(jq -r '.builds[] | select(.builder_type=="amazon-ebs") | .artifact_id' manifest.json | cut -d ":" -f2)
+          echo "AWS_AMI_ID=$AWS_AMI_ID" >> $GITHUB_ENV
+
+          # Define image names from secrets (simplified naming convention)
+          GCP_IMAGE_NAME=$(jq -r '.builds[] | select(.builder_type=="googlecompute") | .artifact_id' manifest.json)
+          echo "GCP_IMAGE_NAME=$GCP_IMAGE_NAME" >> $GITHUB_ENV
+
+  share-images:
+    name: Share AWS AMI & GCP Image with Demo Accounts/Projects
+    runs-on: ubuntu-latest
+    needs: packer-build
+    steps:
+      - name: Setup AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Setup GCP CLI
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
+
+      - name: Share AWS AMI with Demo Account
+        run: |
+          echo "Sharing AWS AMI ${{ env.AWS_AMI_ID }} with Demo Account..."
+          aws ec2 modify-image-attribute --image-id ${{ env.AWS_AMI_ID }} \
+            --launch-permission "Add=[{UserId=${{ secrets.AWS_DEMO_ACCOUNT_ID }}]}"
+
+      - name: Share GCP Image with Demo Project
+        run: |
+          echo "Sharing GCP Image ${{ env.GCP_IMAGE_NAME }} with Demo Project..."
+          gcloud compute images add-iam-policy-binding ${{ env.GCP_IMAGE_NAME }} \
+            --project=${{ secrets.GCP_PROJECT_ID }} \
+            --member="user:${{ secrets.GCP_DEMO_ACCOUNT_EMAIL }}" \
+            --role="roles/compute.imageUser"
