--- a/backend/package.json
+++ b/backend/package.json
@@ -9,23 +9,28 @@
     "build": "tsc -b",
     "dev": "tsc -b && node dist/bin.js",
     "start": "node dist/bin.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
     "@prisma/client": "^6.3.0",
+    "@rollup/rollup-linux-x64-gnu": "^4.34.0",
     "@types/express": "^5.0.0",
+    "@types/supertest": "^6.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "typescript": "^5.7.3",
-    "vitest": "^3.0.4",
-    "@rollup/rollup-linux-x64-gnu": "^4.34.0",
-    "@types/supertest": "^6.0.2",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^6.3.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "typescript": "^5.7.3",
+    "uuid": "^11.1.0",
+    "vitest": "^3.0.4"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
+    "@types/multer": "^1.4.12",
+    "@types/uuid": "^10.0.0"
   }
 }
