--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -140,20 +140,20 @@ jobs:
             -var "build_timestamp=$BUILD_TIMESTAMP" \
             machine.pkr.hcl
 
-  share-images:
-    name: Share AWS AMI & GCP Image with Demo Accounts/Projects
-    runs-on: ubuntu-latest
-    needs: packer-build
-    steps:
-      - name: Setup GCP CLI
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
+  # share-images:
+  #   name: Share AWS AMI & GCP Image with Demo Accounts/Projects
+  #   runs-on: ubuntu-latest
+  #   needs: packer-build
+  #   steps:
+  #     - name: Setup GCP CLI
+  #       uses: google-github-actions/auth@v2
+  #       with:
+  #         credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
 
-      - name: Share GCP Image with Demo Project
-        run: |
-          echo "Sharing GCP Image ${{ secrets.GCP_IMAGE_NAME }} with Demo Project..."
-          gcloud compute images add-iam-policy-binding ${{ secrets.GCP_IMAGE_NAME }} \
-            --project=${{ secrets.GCP_PROJECT_ID }} \
-            --member="user:${{ secrets.GCP_DEMO_ACCOUNT_EMAIL }}" \
-            --role="roles/compute.imageUser"
+  #     - name: Share GCP Image with Demo Project
+  #       run: |
+  #         echo "Sharing GCP Image ${{ secrets.GCP_IMAGE_NAME }} with Demo Project..."
+  #         gcloud compute images add-iam-policy-binding ${{ secrets.GCP_IMAGE_NAME }} \
+  #           --project=${{ secrets.GCP_PROJECT_ID }} \
+  #           --member="user:${{ secrets.GCP_DEMO_ACCOUNT_EMAIL }}" \
+  #           --role="roles/compute.imageUser"
