--- a/backend/package.json
+++ b/backend/package.json
@@ -18,15 +18,18 @@
     "@prisma/client": "^6.3.0",
     "@rollup/rollup-linux-x64-gnu": "^4.34.0",
     "@types/express": "^5.0.0",
+    "@types/node-statsd": "^0.1.6",
     "@types/supertest": "^6.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
+    "node-statsd": "^0.1.1",
     "prisma": "^6.3.0",
     "supertest": "^7.0.0",
     "typescript": "^5.7.3",
     "uuid": "^11.1.0",
-    "vitest": "^3.0.4"
+    "vitest": "^3.0.4",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
