--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -138,7 +138,58 @@ jobs:
           packer build \
             -var "DATABASE_URL=${{ secrets.DATABASE_URL }}" \
             -var "build_timestamp=$BUILD_TIMESTAMP" \
-            machine.pkr.hcl
+            machine.pkr.hcl | tee packer-output.txt
+
+      - name: Extract AMI ID
+        id: ami
+        run: |
+          AMI_ID=$(grep 'artifact,0,id' packer-output.txt | cut -d',' -f6 | cut -d':' -f2)
+          echo "ami_id=$AMI_ID" >> $GITHUB_OUTPUT
+
+  deploy-demo:
+    name: Deploy to DEMO Account
+    runs-on: ubuntu-latest
+    needs: packer-build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Configure DEMO AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.DEMO_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DEMO_AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Update Launch Template
+        run: |
+          LATEST_VERSION=$(aws ec2 describe-launch-templates --launch-template-ids ${{ secrets.DEMO_LAUNCH_TEMPLATE_ID }} --query 'LaunchTemplates[0].LatestVersionNumber' --output text)
+          aws ec2 create-launch-template-version \
+            --launch-template-id ${{ secrets.DEMO_LAUNCH_TEMPLATE_ID }} \
+            --source-version $LATEST_VERSION \
+            --launch-template-data "{\"ImageId\": \"${{ needs.packer-build.outputs.ami_id }}\"}"
+
+      - name: Trigger Instance Refresh
+        run: |
+          aws autoscaling start-instance-refresh \
+            --auto-scaling-group-name ${{ secrets.DEMO_ASG_NAME }} \
+            --preferences '{"MinHealthyPercentage": 90, "InstanceWarmup": 300}'
+
+      - name: Wait for Instance Refresh
+        run: |
+          while true; do
+            STATUS=$(aws autoscaling describe-instance-refreshes --auto-scaling-group-name ${{ secrets.DEMO_ASG_NAME }} --query 'InstanceRefreshes[0].Status' --output text)
+            if [ "$STATUS" = "Successful" ]; then
+              echo "Instance refresh succeeded"
+              break
+            elif [ "$STATUS" = "Failed" ] || [ "$STATUS" = "Cancelling" ] || [ "$STATUS" = "Cancelled" ]; then
+              echo "Instance refresh failed with status: $STATUS"
+              exit 1
+            fi
+            echo "Waiting for instance refresh..."
+            sleep 30
+          done
 
   # share-images:
   #   name: Share AWS AMI & GCP Image with Demo Accounts/Projects
